--- a/site/styles.css
+++ b/site/styles.css
@@ -1,7 +1,10 @@
 
-img {
+#logo {
     width: 20%;
     height: auto;
     float: right;
     padding-right: 80px;
+}
+#size-input{
+    width: 100px;
 }
